// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
  <div
    class="t-divider t-divider--horizontal"
  />
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
  <div
    class="t-divider t-divider--horizontal t-divider--dashed"
  />
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
</DocumentFragment>
`;

exports[`text.jsx 1`] = `
<DocumentFragment>
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
  <div
    class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-left"
  >
    <span
      class="t-divider__inner-text"
    >
      TDesign
    </span>
  </div>
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
  <div
    class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-center"
  >
    <span
      class="t-divider__inner-text"
    >
      TDesign
    </span>
  </div>
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
  <div
    class="t-divider t-divider--horizontal t-divider--with-text t-divider--with-text-right"
  >
    <span
      class="t-divider__inner-text"
    >
      TDesign
    </span>
  </div>
  <p>
    通过高效广告平台，协助品牌和市场营销者触达数以亿计的中国消费者通过金融科技及企业服务，促进合作伙伴业务发展，助力实现数字化升级，我们大力投资于人才队伍和推动科技创新，积极参与互联网行业协同发展。
  </p>
</DocumentFragment>
`;

exports[`vertical.jsx 1`] = `
<DocumentFragment>
  <span>
    正直
  </span>
  <div
    class="t-divider t-divider--vertical"
  />
  <span>
    进取
  </span>
  <div
    class="t-divider t-divider--vertical"
  />
  <span>
    合作
  </span>
  <div
    class="t-divider t-divider--vertical"
  />
  <span>
    创新
  </span>
</DocumentFragment>
`;
